if BUILD_ACPI_NOTIFIER_PLUGIN
acpi_notifier_dir = acpi_notifier
endif

if BUILD_ADDRESS_KEEPER_PLUGIN
address_keeper_dir = address_keeper
endif

if BUILD_ARCHIVE_PLUGIN
archive_dir = archive
endif

if BUILD_ATTACHWARNER_PLUGIN
attachwarner_dir = attachwarner
endif

if BUILD_ATT_REMOVER_PLUGIN
att_remover_dir = att_remover
endif

if BUILD_BOGOFILTER_PLUGIN
bogofilter_dir = bogofilter
endif

if BUILD_BSFILTER_PLUGIN
bsfilter_dir = bsfilter
endif

if BUILD_CLAMD_PLUGIN
clamd_dir = clamd
endif

if BUILD_DEMO_PLUGIN
demo_dir = demo
endif

if BUILD_DILLO_VIEWER_PLUGIN
dillo_viewer_dir = dillo_viewer
endif

if BUILD_FANCY_PLUGIN
fancy_dir = fancy
endif

if BUILD_FETCHINFO_PLUGIN
fetchinfo_dir = fetchinfo
endif

if BUILD_GDATA_PLUGIN
gdata_dir = gdata
endif

if BUILD_MAILMBOX_PLUGIN
mailmbox_dir = mailmbox
endif

if BUILD_NEWMAIL_PLUGIN
newmail_dir = newmail
endif

if BUILD_NOTIFICATION_PLUGIN
notification_dir = notification
endif

if BUILD_PDF_VIEWER_PLUGIN
pdf_viewer_dir = pdf_viewer
endif

if BUILD_PERL_PLUGIN
perl_dir = perl
endif

if BUILD_PYTHON_PLUGIN
python_dir = python
endif

if BUILD_PGPCORE_PLUGIN
pgpcore_dir = pgpcore
if BUILD_PGPMIME_PLUGIN
pgpmime_dir = pgpmime
endif
if BUILD_PGPINLINE_PLUGIN
pgpinline_dir = pgpinline
endif
if BUILD_SMIME_PLUGIN
smime_dir = smime
endif
endif

if BUILD_RSSYL_PLUGIN
rssyl_dir = rssyl
endif

if BUILD_SPAMASSASSIN_PLUGIN
spamassassin_dir = spamassassin
endif

if BUILD_SPAM_REPORT_PLUGIN
spam_report_dir = spam_report
endif

if BUILD_TNEF_PARSE_PLUGIN
tnef_parse_dir = tnef_parse
endif

if BUILD_TRAYICON_PLUGIN
trayicon_dir = trayicon
endif

if BUILD_VCALENDAR_PLUGIN
vcalendar_dir = vcalendar
endif

SUBDIRS = \
	$(acpi_notifier_dir) \
	$(address_keeper_dir) \
	$(archive_dir) \
	$(att_remover_dir) \
	$(attachwarner_dir) \
	$(bogofilter_dir) \
	$(bsfilter_dir) \
	$(clamd_dir) \
	$(demo_dir) \
	$(dillo_viewer_dir) \
	$(fancy_dir) \
	$(fetchinfo_dir) \
	$(gdata_dir) \
	$(mailmbox_dir) \
	$(newmail_dir) \
	$(notification_dir) \
	$(pdf_viewer_dir) \
	$(perl_dir) \
	$(python_dir) \
	$(pgpcore_dir) \
	$(pgpmime_dir) \
	$(pgpinline_dir) \
	$(rssyl_dir) \
	$(smime_dir) \
	$(spamassassin_dir) \
	$(spam_report_dir) \
	$(tnef_parse_dir) \
	$(trayicon_dir) \
	$(vcalendar_dir)
