SUBDIRS = \
	acpi_notifier \
	address_keeper \
	archive \
	att_remover \
	attachwarner \
	bogofilter \
	bsfilter \
	clamd \
	demo \
	fancy \
	fetchinfo \
	gdata \
	mailmbox \
	newmail \
	notification \
	pdf_viewer \
	perl \
	python \
	pgpcore \
	pgpmime \
	pgpinline \
	rssyl \
	smime \
	spamassassin \
	spam_report \
	tnef_parse \
	vcalendar
