# Makefile.am for "src/plugins" directory
# This file is part of Claws Mail package.
# See COPYING file for license details.

SUBDIRS = \
	acpi_notifier \
	address_keeper \
	archive \
	att_remover \
	attachwarner \
	bogofilter \
	bsfilter \
	clamd \
	demo \
	fancy \
	fetchinfo \
	gdata \
	geolocation \
	libravatar \
	mailmbox \
	newmail \
	notification \
	pdf_viewer \
	perl \
	python \
	pgpcore \
	pgpmime \
	pgpinline \
	rssyl \
	smime \
	spamassassin \
	spam_report \
	tnef_parse \
	vcalendar
